--- a/css/app.css
+++ b/css/app.css
@@ -1,1 +1,25 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  background-color: #5F57EA;
+}
+
+h1 {
+  margin-left: 10px;
+  color: white;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  background-color: black;
+}
+header img {
+  width: 70px;
+}
