--- a/src/app.scss
+++ b/src/app.scss
@@ -14,7 +14,7 @@ header {
   width: 100%;
   height: 80px;
   background-color: black;
-   img {
+  img {
     width: 70px;
   }
   h1 {
@@ -24,5 +24,29 @@ header {
 }
 
 .container-cd {
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: auto;
+  padding: 100px 0;
+  .cd {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 380px;
+    flex-basis: 200px;
+    margin: 20px;
+    padding: 10px;
+    color: white;
+    background: rgb(52, 46, 112);
+    img {
+      width: 160px;
+    }
+    #title {
+      font-size: 22px;
+    }
+  }
 }
