Commit finale milestone 1

--- a/css/app.css
+++ b/css/app.css
@@ -42,6 +42,7 @@ header h1 {
   margin: 20px;
   padding: 10px;
   color: white;
+  text-align: center;
   background: #342e70;
 }
 .container-cd .cd img {
