--- a/src/app.scss
+++ b/src/app.scss
@@ -41,6 +41,7 @@ header {
     margin: 20px;
     padding: 10px;
     color: white;
+    text-align: center;
     background: rgb(52, 46, 112);
     img {
       width: 160px;
